--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,49 @@
-# Prerequisites
-*.d
+### TwinCAT3 ###
+# website: https://www.beckhoff.com/twincat3/
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+# TwinCAT PLC
+*.plcproj.bak
+*.plcproj.orig
+*.tpy
+*.tclrs
+*.library
+*.compiled-library
+*.compileinfo
+*.asm
+*.core
+LineIDs.dbg
+LineIDs.dbg.bak
 
-# Linker output
-*.ilk
-*.map
-*.exp
+# TwinCAT C++ and shared types
+# ignoring the TMC file is only useful for plain PLC programming
+# as soon as shared data types (via tmc), C++ or in general TcCom-Module are used, the TMC file has to be part of the repository
+*.tmc
+*.tmcRefac
 
-# Precompiled Headers
-*.gch
-*.pch
+# TwinCAT project files
+*.tsproj.bak
+*.tsproj.b?k
+*.tsproj.orig
+*.xti.bak
+*.xti.bk?
+*.xti.orig
+*.xtv
+*.xtv.bak
+*.xtv.bk?
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
+# Multiuser specific
+**/.TcGit/
 
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+# exclude not required folders
+**/_Boot/
+**/_CompileInfo/
+**/_Libraries/
+**/_ModuleInstall/
+**/_Deployment/
+**/_Repository/
 
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+# VS Shell project specific files and folders
+**/.vs/
+*.~u
+*.project.~u
+*.suo
